# yapper-

./: .env  .env.development  .gitignore  .nixpacks.toml  CLAUDE.md  EMAIL_SETUP.md  LOCAL_DEV_SETUP.md  Makefile  Procfile  README.md  SUPABASE_SETUP.md  app.py  config.py  extensions.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  reset-db.py  run_tests.py  setup-local-dev.sh  vercel.json
.claude/: settings.local.json
backend/: .nixpacks.toml  __init__.py  commands.py
backend/config/: environment.py  logging.py
backend/models/: Entry_Table.py  Page_Table.py  Personality_Table.py  Plot_Set_Char_Table.py  Story_Table.py  UserInput.py  User_Table.py  __init__.py  entries.py  page.py  personality.py  user.py  users.py
backend/routes/: audio.py  audio_bulk.py  audit.py  auth.py  bulk_upload.py  chat.py  converse.py  entries.py  files.py  main.py  monthly_summaries.py  pages.py  personality.py
backend/services/: Initial_processing.py  bulk_upload.py  context_retrieval.py  email_service.py  embedding.py  entry_audit.py  entry_cleanup.py  hnsw_index.py  initial_processing.py  level_one_process.py  personality_profile.py  story_extractor.py  thoughts.txt  write_story.py
backend/services/Character/: Personality.py  Personality_Profile.py
backend/utils/: audio_metadata.py  audio_transcription.py  entry_helpers.py  excel_parser.py  rate_limiter.py  supabase_storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  index.css  main.jsx
frontend/src/components/: AudioRecorder.js  Auth.css  AuthCallback.jsx  BulkUploadPage.css  BulkUploadPage.jsx  ChatInterface.css  ChatInterface.js  ChatInterface.jsx  EmailConfirmation.jsx  EmailVerification.jsx  Header.css  Header.jsx  Home.js  JournalEntryForm.css  JournalEntryForm.js  JournalEntryForm.jsx  JournalPage.css  JournalPage.jsx  LandingPage.css  LandingPage.jsx  Login.jsx  NavigationTabs.css  NavigationTabs.jsx  ProtectedRoute.jsx  Register.jsx  SharedLayout.css  SharedLayout.js  SharedLayout.jsx  rootPageForm.css  rootPageForm.js
frontend/src/context/: AuthContext.js  AuthContext.jsx  supabase.js
migrations/versions/: 0653654d5da5_add_procseed_column_to_pages.py  18d469fc40f4_create_stories_table_and_i_think_the_.py  4326eaa3378c_increase_password_hash_length.py  6393da0d1606_add_vectors_column_to_pages.py  772683aef21b_update_story_table_primary_key.py  977b0421453c_create_pages_table.py  add_title_date_column.py  add_user_entry_id.py  add_user_security_fields.py  c988f2ac2484_add_personality_assessments_table.py  replace_entry_id_with_user_and_entry_id.py
scripts/: populate_user_entry_ids.py  run_vectorize.py
supabase/: config.toml
tests/: conftest.py  test_chat.py  test_embeddings.py  test_entries.py
z_project roadmap/: 1. real_space.txt  2. liminal_space.txt  3. hyper_space.txt  4. business.txt  ceo.txt  output.txt  system_design.drawio - draw.io.htm
