[project]
name = "yapper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
"Flask>=2.3.0,<3.0",
"flask-apscheduler==1.13.1",
"flask-cors==3.0.10",
"gunicorn==23.0.0",
"httpx>=0.26.0",
"openai==1.64.0",
"orjson==3.10.15",
"pgvector==0.3.6",
"pydantic>=2.0.0",
"python-dateutil==2.9.0.post0",
"python-dotenv==1.0.0",
"python-multipart>=0.0.6",
"pytz==2025.1",
"pyyaml==6.0.2",
"requests",
"supabase>=2.16.0",
"tenacity==9.0.0",
"tiktoken==0.9.0",
"typing-extensions>=4.8.0",
"tzdata==2025.1",
"tzlocal==5.3",
"websocket-client==1.8.0",
"websockets>=12.0",
"Werkzeug>=2.3.0,<3.0",
]
